tests/fixtures/errors/copy_unsupported.z
# .copy has no implementation for user-defined reftypes (deep copy is
# strings/containers/generic-params only) and no meaning for valtypes
# (they copy by assignment). Both forms must diagnose, not miscompile.

U: union {
    a: i64
    b: String
}

R: record {
    y: i64
}

main: function is {
    u: (U.a 5)
    c: u.copy
    r: (R y: 2)
    d: r.copy
}
